<resources>
    <string name="app_name">RickAndMorty</string>

    <string name="try_again">Попробовать еще раз</string>
    <string name="name">Имя: </string>
    <string name="status">Статус: \n</string>
    <string name="species">Вид: \n</string>
    <string name="type">Подвид: \n</string>
    <string name="gender">Гендер: \n</string>
    <string name="name_origin">Родное место: \n</string>
    <string name="last_known_location">Последнее местоположение: \n</string>

    <string name="status_alive" translatable="false">alive</string>
    <string name="status_dead" translatable="false">dead</string>
    <string name="status_unknown" translatable="false">unknown</string>
    <string name="gender_female" translatable="false">female</string>
    <string name="gender_male" translatable="false">male</string>
    <string name="gender_genderless" translatable="false">genderless</string>
    <string name="gender_unknown" translatable="false">unknown</string>

    <string name="cancel_search">отменить</string>
    <string name="clear_filter">очистить фильтр</string>
    <string name="search">поиск</string>
    <string name="text_a_name_of_entity_hint">Поиск по имени</string>
    <string name="episodes">Список эпизодов, в которых появился этот персонаж</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_characters_who_have_been_seen_in_the_episode">List of characters who have been seen in the episode</string>
    <string name="item_menu_title_all_characters">Персонажи</string>
    <string name="item_menu_title_all_episodes">Эпизоды</string>
    <string name="exact_search">Точный поиск по имени</string>
    <string name="item_menu_title_all_locations">Локации</string>
    <string name="unknown_location">Локация не найдена</string>
    <string name="list_of_residents">Список жителей</string>
</resources>