<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    android:visibility="gone"
    tools:visibility="visible">

    <EditText
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_a_name_of_entity_hint"
        android:imeOptions="actionSend"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true" />

    <RadioGroup
        android:id="@+id/filterStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/status_alive" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/status_dead" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:singleLine="true"
            android:text="@string/status_unknown" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/filterGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/gender_female" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/gender_male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:singleLine="true"
            android:text="@string/gender_genderless" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:singleLine="true"
            android:text="@string/gender_unknown" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_search" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_filter" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ifStartWithSwitcher"
        android:text="@string/exact_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>