<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.MainFragment" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".fragments.main.MainFragment"
        tools:listitem="@layout/item_entity" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mainErrorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/try_again"
        tools:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:src="@drawable/ic_search"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/LOAD_FILTER"
        android:pointerIcon="text"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"/>


    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/cardview_light_background"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <EditText
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_a_name_of_entity_hint"
            android:imeOptions="actionSend"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true" />

        <RadioGroup
            android:id="@+id/filterStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/firstRadioButton_Status"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/status_alive" />

            <RadioButton
                android:id="@+id/secondRadioButton_Status"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/status_dead" />

            <RadioButton
                android:id="@+id/ThirdRadioButton_Status"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:singleLine="true"
                android:text="@string/status_unknown" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/filterGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/firstRadioButton_Gender"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/status_female" />

            <RadioButton
                android:id="@+id/secondRadioButton_Gender"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/status_male" />

            <RadioButton
                android:id="@+id/ThirdRadioButton_Gender"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:singleLine="true"
                android:text="@string/status_genderless" />

            <RadioButton
                android:id="@+id/ForthRadioButton_Gender"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:singleLine="true"
                android:text="@string/status_unknown" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_search" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_filter" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>